Fix layout issue

--- a/pontoon/messaging/static/css/messaging.css
+++ b/pontoon/messaging/static/css/messaging.css
@@ -100,6 +100,7 @@
 
     .check-list {
       overflow: visible;
+      width: 100%;
 
       .check-box.transactional {
         display: none;
